@@ -396,7 +396,7 @@ public class BufferHistory
 	//{{{ trimToLimit() method
 	private static void trimToLimit(Deque<Entry> list)
 	{
-		int max = Math.max(jEdit.getIntegerProperty("recentFiles",50), 0);
+		int max = jEdit.getIntegerProperty("recentFiles", 40);
 		while(list.size() > max)
 			list.removeLast();
 	} //}}}
